Update to Java 11 (update emulator)